no messages yet deleted

--- a/index (2)(1).html
+++ b/index (2)(1).html
@@ -116,7 +116,7 @@
       return (
         <div id="messages">
           {messages.length === 0 ? (
-            <p>No messages yet...</p>
+            <p>Please select a channel</p>
           ) : (
             messages.map((message, index) => (
               <div key={index} className="message">
